# Mesh-MAC-Spam

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.c  meshMacSpam.h  my_data.h  proj4.c  updateSpam.c  wifiConnect.c
main/include/: meshMacSpam.h
